PR001-202 fix sidebar items alignment

--- a/src/shared/components/SidebarLeft/SidebarLeft.less
+++ b/src/shared/components/SidebarLeft/SidebarLeft.less
@@ -108,9 +108,11 @@
   }
 
   &-itemIconList {
-    // height: 14px;
-    // width: 14px;
     margin-right: 12px;
+  }
+
+  &-itemWithSublist {
+    padding-bottom: 3px;
   }
 
   &-lists,
